View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026581 | Open CASCADE | OCCT:Coding | public | 2015-08-21 11:30 | 2016-04-20 15:49 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026581: Eliminate compile warnings obtained by building occt with vc14: 'type cast' conversion | ||||
Description | Next warnings appears during occt compilation with vc14: 1>..\src\OSD\OSD_EnvironmentIterator.cxx(122): warning C4312: 'type cast': conversion from 'Standard_Integer' to 'Standard_CString' of greater size 1>..\src\OSD\OSD_EnvironmentIterator.cxx(130): warning C4312: 'type cast': conversion from 'Standard_Integer' to 'Standard_CString' of greater size 1>..\src\OSD\OSD_EnvironmentIterator.cxx(142): warning C4312: 'type cast': conversion from 'Standard_Integer' to 'Standard_CString' of greater size 1>..\src\OSD\OSD_File.cxx(1127): warning C4312: 'type cast': conversion from 'DWORD' to 'Standard_CString' of greater size 1>..\src\OSD\OSD_File.cxx(1184): warning C4312: 'type cast': conversion from 'DWORD' to 'Standard_CString' of greater size 1>..\src\OSD\OSD_Thread.cxx(246): warning C4312: 'type cast': conversion from 'DWORD' to 'Standard_Address' of greater size 1>..\src\OSD\OSD_Thread.cxx(276): warning C4312: 'type cast': conversion from 'DWORD' to 'Standard_Address' of greater size 1>..\src\OSD\OSD_WNT.cxx(917): warning C4312: 'type cast': conversion from 'DWORD' to 'LPVOID' of greater size 1>..\src\OSD\OSD_WNT.cxx(972): warning C4312: 'type cast': conversion from 'DWORD' to 'LPVOID' of greater size 1>..\src\OSD\OSD_WNT.cxx(980): warning C4312: 'type cast': conversion from 'DWORD' to 'LPVOID' of greater size 1>..\src\OSD\OSD_WNT.cxx(1125): warning C4312: 'type cast': conversion from 'DWORD' to 'LPVOID' of greater size | ||||
Steps To Reproduce | Try to compile occt with vc14 (Visual Studio 2015) | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR26581 has been created by ski. SHA-1: a4aba412d639c9ad5bc6d99857a93decfde2c55e Detailed log of new commits: Author: ski Date: Tue Aug 18 17:19:17 2015 +0300 0026581: Eliminate compile warnings obtained by building occt with vc14: 'type cast' conversion Eliminated warnings "'type cast': conversion" |
|
Branch CR26581 has been updated forcibly by ski. SHA-1: a642301c0e9a863ca9bd9c17915eec8072642947 |
|
Warnings were fixed on vc14. |
|
Functions used in the proposed fix (PtrToLong etc.) are defined only on Windows, thus it is not portable. The types involved should probably be revised instead of modifying a cast. |
|
Branch CR26581 has been updated forcibly by rkv. SHA-1: 0e05bf1c55772e57aa3da4641bc65801e5591d5f |
|
PtrToLong has been removed from common code. |
|
Dear bugmaster, please also switch to tested (see 0026585). |
|
Branch CR26581 has been deleted by kgv. SHA-1: 0e05bf1c55772e57aa3da4641bc65801e5591d5f |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-08-21 11:30 |
|
New Issue | |
2015-08-21 11:30 |
|
Assigned To | => ski |
2015-08-21 11:30 |
|
Status | new => assigned |
2015-08-21 11:53 |
|
Summary | Eliminate compile errors obtained by building occt with vc14 => Eliminate compile warnings obtained by building occt with vc14: 'type cast' conversion |
2015-08-21 11:53 |
|
Description Updated | |
2015-08-21 17:12 | git | Note Added: 0044512 | |
2015-08-25 09:31 | kgv | Relationship added | child of 0026547 |
2015-09-09 13:05 | git | Note Added: 0045303 | |
2015-09-09 14:20 |
|
Note Added: 0045316 | |
2015-09-09 14:20 |
|
Assigned To | ski => abv |
2015-09-09 14:20 |
|
Status | assigned => resolved |
2015-09-10 06:37 |
|
Note Added: 0045364 | |
2015-09-10 06:37 |
|
Assigned To | abv => ski |
2015-09-10 06:37 |
|
Status | resolved => assigned |
2015-09-10 14:26 |
|
Description Updated | |
2015-09-23 09:45 |
|
Assigned To | ski => rkv |
2015-09-25 00:24 |
|
Relationship added | related to 0024574 |
2015-10-02 16:19 | git | Note Added: 0046408 | |
2015-10-02 16:25 |
|
Note Added: 0046411 | |
2015-10-02 16:26 |
|
Assigned To | rkv => kgv |
2015-10-02 16:26 |
|
Status | assigned => resolved |
2015-10-12 13:32 | kgv | Note Added: 0046676 | |
2015-10-12 13:32 | kgv | Assigned To | kgv => bugmaster |
2015-10-12 13:32 | kgv | Status | resolved => feedback |
2015-10-13 16:02 | bugmaster | Status | feedback => tested |
2015-10-16 13:18 | bugmaster | Changeset attached | => occt master 5a9487c4 |
2015-10-16 13:18 | bugmaster | Status | tested => verified |
2015-10-16 13:18 | bugmaster | Resolution | open => fixed |
2015-10-16 16:28 | git | Note Added: 0046947 | |
2015-11-02 17:56 | kgv | Relationship added | parent of 0026831 |
2016-04-20 15:44 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:49 |
|
Status | verified => closed |