0026581: Eliminate compile warnings obtained by building occt with vc14: 'type cast' conversion